ratings and info are connected